[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "business-intelligence-dashboard"
version = "1.0.0"
description = "Interactive business intelligence tool featuring natural language to SQL conversion and HTML chart plotting."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pytest>=7.0.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
